# swb_infra

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tannen_features.txt
analysis/: 00_overview.ipynb  01_replicate_legacy_matrix.ipynb  02_replicate_paper.ipynb  03_fix_scaling_and_backchannel_autopsy.ipynb  04_caller_level_volume.ipynb  05_caller_level_interactional.ipynb  06_caller_level_volume_brizan_revisions_plus.ipynb  07_final.ipynb  README.md
docs/: AUDIT.md  Audit_July_2026_Paper_Submission_Min.md  FEATURES.md  PIPELINE.md  orthogonal_features_audit_jun19.md  tannen_feature_map.md
scripts/: build_merge_test.py  build_tannen_features.py  merge_features.py
src/swb_extract/: analysis.py  audio_index.py  cli.py  features_table.py  manifest.py  nxt.py  slicer.py  (+4 more)
tests/: conftest.py  test_audio_index.py  test_cli_smoke.py  test_demographics.py  test_features_table.py  test_filler_word_rate.py  test_fto.py  test_join_contract.py  test_latching_flag.py  test_laughter.py  test_loudness.py  test_machine_gun_question.py  test_manifest.py  test_mutual_revelation_flag.py  test_nxt.py  test_overlap.py  test_overlap_split.py  test_per_second_features.py  test_personal_focus_score.py  test_pitch.py  test_pronoun_rate.py  test_question_flags.py  test_repetition_rate.py  test_repetitions_in_current.py  test_repetitions_in_previous.py  test_rising_terminal.py  test_slicer.py  test_stats_modality.py  test_syllable_rate.py  test_taxometrics.py  test_token_count.py  test_topic_label.py  test_transcripts.py  test_turn_gap.py  test_within_utterance_pauses.py  test_word_rate.py
(+33 files in other folders)
