[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swb-extract"
version = "0.1.0"
description = "Switchboard utterance slicer producing a 2-column manifest joinable by future feature extractors"
requires-python = ">=3.11"
dependencies = [
    "empath>=0.89",
    "spacy>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
swb-extract = "swb_extract.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
